--- a/style-old.css
+++ b/style-old.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Open Sans", Calibri, sans-serif;
     font-size: 100%;
-    background-color:#F2F2F2;
+    background-color:#2ba5fc;
     height: 400px;
     width: 300px;
   }
@@ -18,12 +18,8 @@ select {
     float:left;
   }
   
-  p,h1,h2,h3,h4 {
-    color: #004469;
-  }
-  
   p {
-    font-size: 12px;
+    color: #fff;
   }
 
 /* ========================  LOGIN PAGE  ======================== */
@@ -40,7 +36,7 @@ select {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 70px;
+    padding-top: 42px;
     padding-bottom: 62px;
 }
 
@@ -48,7 +44,8 @@ select {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 30px;
+    height: 75px;
+    width: 279px;
   }
 
 .input-page-content {
@@ -83,26 +80,9 @@ select {
   padding-left: 20px;
 }
 
-.row {
-  margin-left: 0px;
-  margin-right: 0px;
-}
 .header {
-  height: 60px;
+  height: 70px;
 }
-
-.five-vpadding {
-  padding-top: 5px;
-  padding-bottom: 5px;  
-}
-.ten-vpadding {
-  padding-top: 10px;
-  padding-top: 10px;
-}
-
-.twenty-vpadding {
-  padding-top: 20px;
-  padding-top: 20px;}
 
 .header-content-wrapper {
   padding-top: 20px;
@@ -118,16 +98,6 @@ select {
   height: 40px;
   width: 40px;
   
-}
-
-.permit-icon {
-  height: 25px;
-  width: 25px;
-  border-radius: 5px;
-}
-
-.permit-data {
-  padding-top: 4px;
 }
 
 .content {
@@ -170,54 +140,13 @@ select {
   padding-bottom 20px;
 }
 
-.btn-full-solid {
+.btn-full-width {
   padding: 12px 10px;
-  width: 240px;
-  background-color: #4CCF40; 
-  border-color: #4CCF40; 
-  color: #fff;
-  margin: 0px 10px;
-}
-
-.btn-half-solid {
-  width: 120px;
-  font-size: 12px;
-  padding: 10px 12px;
-  margin: 10px 10px;
-  background-color: #4CCF40; 
-  border-color: #4CCF40; 
+  width: 260px;
+  background-color: #DB357A; 
+  border-color: #DB357A;
   color: #fff;
 }
-
-.btn-half-outline {
-  width: 120px;
-  font-size: 12px;
-  padding: 10px 12px;
-  margin: 10px 10px; 
-  background-color: transparent; 
-  border-color: #4CCF40; 
-  color: #4CCF40;
-}
-
-.btn-half-solid:hover,
-.btn-half-solid:focus,
-.btn-half-solid.focus,
-.btn-full-solid:hover,
-.btn-full-solid:focus,
-.btn-full-solid.focus {
-  background-color: #339E2A;
-  border-color: #339E2A;
-  color: #fff;
-}
-
-.btn-half-outline:hover,
-.btn-half-outline:focus,
-.btn-half-outline.focus {
-  border-color: #339E2A; 
-  color: #339E2A;
-}
-
-
 
 .input {
     height: 30px;
@@ -227,8 +156,9 @@ select {
     border: 0px solid #ccc;
 } 
 
-.permits-sent-container,.permits-received-container {
-  border-top: 1px solid rgba(0,68,105,0.3);
+.row-wrapper {
+  padding-top: 20px;
+  padding-bottom 20px;
 }
 
 .col-emp-1, .col-emp-2, .col-emp-3, .col-emp-4, .col-emp-5, .col-emp-6, .col-emp-7, .col-emp-8, .col-emp-9, .col-emp-0, .col-emp-11, .col-emp-12 {
