--- a/style-2.css
+++ b/style-2.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Open Sans", Calibri, sans-serif;
     font-size: 100%;
-    background-color:#2ba5fc;
+    background-color:#F2F2F2;
     height: 400px;
     width: 300px;
   }
@@ -19,7 +19,11 @@ select {
   }
   
   p,h1,h2,h3,h4 {
-    color: #fff;
+    color: #004469;
+  }
+  
+  p {
+    font-size: 12px;
   }
 
 /* ========================  LOGIN PAGE  ======================== */
@@ -36,7 +40,7 @@ select {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 42px;
+    padding-top: 70px;
     padding-bottom: 62px;
 }
 
@@ -44,8 +48,7 @@ select {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 75px;
-    width: 75px;
+    height: 30px;
   }
 
 .input-page-content {
@@ -80,17 +83,26 @@ select {
   padding-left: 20px;
 }
 
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
 .header {
   height: 60px;
 }
 
+.five-vpadding {
+  padding-top: 5px;
+  padding-bottom: 5px;  
+}
 .ten-vpadding {
-  padding: 10px 0px;
+  padding-top: 10px;
+  padding-top: 10px;
 }
 
 .twenty-vpadding {
-  padding: 20px;
-}
+  padding-top: 20px;
+  padding-top: 20px;}
 
 .header-content-wrapper {
   padding-top: 20px;
@@ -106,6 +118,16 @@ select {
   height: 40px;
   width: 40px;
   
+}
+
+.permit-icon {
+  height: 25px;
+  width: 25px;
+  border-radius: 5px;
+}
+
+.permit-data {
+  padding-top: 4px;
 }
 
 .content {
@@ -148,13 +170,54 @@ select {
   padding-bottom 20px;
 }
 
-.btn-full-width {
+.btn-full-solid {
   padding: 12px 10px;
-  width: 260px;
-  background-color: #DB357A; 
-  border-color: #DB357A;
+  width: 240px;
+  background-color: #4CCF40; 
+  border-color: #4CCF40; 
+  color: #fff;
+  margin: 0px 10px;
+}
+
+.btn-half-solid {
+  width: 120px;
+  font-size: 12px;
+  padding: 10px 12px;
+  margin: 10px 10px;
+  background-color: #4CCF40; 
+  border-color: #4CCF40; 
   color: #fff;
 }
+
+.btn-half-outline {
+  width: 120px;
+  font-size: 12px;
+  padding: 10px 12px;
+  margin: 10px 10px; 
+  background-color: transparent; 
+  border-color: #4CCF40; 
+  color: #4CCF40;
+}
+
+.btn-half-solid:hover,
+.btn-half-solid:focus,
+.btn-half-solid.focus,
+.btn-full-solid:hover,
+.btn-full-solid:focus,
+.btn-full-solid.focus {
+  background-color: #339E2A;
+  border-color: #339E2A;
+  color: #fff;
+}
+
+.btn-half-outline:hover,
+.btn-half-outline:focus,
+.btn-half-outline.focus {
+  border-color: #339E2A; 
+  color: #339E2A;
+}
+
+
 
 .input {
     height: 30px;
@@ -164,12 +227,39 @@ select {
     border: 0px solid #ccc;
 } 
 
-.row-wrapper {
-  padding-top: 20px;
-  padding-bottom 20px;
+.btn-permit-selector {
+  margin-left: -20px;
+  width: 300px;
+  display: inline-block;
+  padding: 6px 20px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 0px;
+}
 }
 
-.
+
+
+
+
+
+.permits-sent-container,.permits-received-container {
+  border-top: 1px solid rgba(0,68,105,0.3);
+}
 
 .col-emp-1, .col-emp-2, .col-emp-3, .col-emp-4, .col-emp-5, .col-emp-6, .col-emp-7, .col-emp-8, .col-emp-9, .col-emp-0, .col-emp-11, .col-emp-12 {
   position: relative;
